--- a/docs/.vuepress/styles.css
+++ b/docs/.vuepress/styles.css
@@ -1,49 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3,
-h4,
-.h4,
-h5,
-.h5,
-h6,
-.h6 {
-  padding-top: 0 !important;
-  margin-top: theme("spacing.10") !important;
-  margin-bottom: theme("spacing.4") !important;
-}
-
-.theme-default-content pre,
-.theme-default-content pre[class*="language-"] {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-}
-
-.theme-default-content:not(.custom) {
-  max-width: 100% !important;
-}
-
-.theme-default-content blockquote p:not(:last-of-type),
-.theme-default-content > p {
-  padding-bottom: theme("spacing.4");
-}
-
-.hero {
-  margin-top: 6rem;
-}
-
-#main-title {
-  opacity: 0;
-  position: absolute;
-  user-select: none;
-}
-
-main li {
-  list-style: disc;
-}
+@import "./prisim.css";
